# TUDNeutron

./: .gitignore  LICENSE  README.md
cpp/: README.md
cpp/adcneutron/: CMakeLists.txt  compile_release
cpp/adcneutron/app/: CMakeLists.txt
cpp/adcneutron/app/src/: adcneutronn.cpp
cpp/adcneutron/components/controller/: controller.h
cpp/adcneutron/components/controller/src/: controller.cpp
cpp/adcneutron/components/dma/: dma.h
cpp/adcneutron/components/dma/src/: dma.cpp
cpp/adcneutron/components/gpio/: gpio.h  psled.h  sensorcontroller.h  switches.h  triggerinput.h  wordlengthcontroller.h
cpp/adcneutron/components/gpio/src/: gpio.cpp  psled.cpp  sensorcontroller.cpp  switches.cpp  triggerinput.cpp  wordlengthcontroller.cpp
cpp/adcneutron/components/hwdevice/: hwdevice.h
cpp/adcneutron/components/memorycontrol/: memorycontrol.h
cpp/adcneutron/components/memorycontrol/src/: memorycontrol.cpp
cpp/adcneutronclient/: .gitignore  adcneutronclient.pro
cpp/adcneutronclient/cpp/: main.cpp  meanring.h  messagetype.h  networkcontroller.h  networkhandler.h  version.h
cpp/adcneutronclient/js/: db.js  js.qrc
cpp/adcneutronclient/qml/: main.qml  qml.qrc
cpp/simpleneutron/: .gitignore  CMakeLists.txt  README.md  compile_debug
cpp/simpleneutron/app/: CMakeLists.txt
cpp/simpleneutron/app/src/: simpleneutron.cpp
cpp/simpleneutron/components/: CMakeLists.txt
cpp/simpleneutron/components/controller/: controller.h
cpp/simpleneutron/components/controller/src/: controller.cpp
cpp/simpleneutron/components/dma/: dma.h
cpp/simpleneutron/components/dma/src/: dma.cpp
cpp/simpleneutron/components/gpio/: gpio.h  measurementstop.h  measurementtimer.h  psled.h  sensorcontroller.h  switches.h  testgenerator.h  triggerinput.h  wordlengthcontroller.h
cpp/simpleneutron/components/gpio/src/: gpio.cpp  measurementstop.cpp  measurementtimer.cpp  psled.cpp  sensorcontroller.cpp  switches.cpp  testgenerator.cpp  triggerinput.cpp  wordlengthcontroller.cpp
cpp/simpleneutron/components/hwdevice/: hwdevice.h
cpp/simpleneutron/components/logger/: logger.h
cpp/simpleneutron/components/logger/src/: logger.cpp
cpp/simpleneutron/components/memorycontrol/: memorycontrol.h
cpp/simpleneutron/components/memorycontrol/src/: memorycontrol.cpp
cpp/simpleneutron/config/: config.cmake.example
cpp/simpleneutronclient/: .gitignore  simpleneutronclient.pro
cpp/simpleneutronclient/cpp/: main.cpp  messagetype.h  networkcontroller.h  networkhandler.h
cpp/simpleneutronclient/icon/: credits.txt
cpp/simpleneutronclient/js/: db.js
cpp/simpleneutronclient/qml/: main.qml  qml.qrc
hw/: README.md
hw/ADCNeutron/: build.tcl
hw/ADCNeutron/devicetree/: system-user.dtsi
hw/SimpleNeutron/: build.tcl
hw/SimpleNeutron/devicetree/: system-user.dtsi
hw/ip_repo/signal_input_1.0/: component.xml
ipcores/: vivado.jou  vivado_1116.backup.jou  vivado_19753.backup.jou  vivado_22739.backup.jou  vivado_25580.backup.jou  vivado_27834.backup.jou
ipcores/.Xil/: design_1_wrapper_propImpl.xdc
ipcores/ip_repo/debounce_1.0/: component.xml
ipcores/ip_repo/hold_signal_1.0/: component.xml
ipcores/ip_repo/ip_8_to_1_and_7_1.0/: component.xml
ipcores/ip_repo/or_1.0/: component.xml
ipcores/ip_repo/signal_detector_1.0/: component.xml
ipcores/ip_repo/signal_generator_1.0/: component.xml
ipcores/managed_ip_project/: managed_ip_project.xpr
plot/: ADC-Plot.ipynb  Readme.md  requirements.txt
scripts/: README.md
scripts/systemctl/: adcneutron.service  simpleneutron.service
simpleneutron/vivado/project_1/: project_1.xpr
test_detector/: test_detector.xpr
test_detector/test_detector.cache/wt/: webtalk_pa.xml
test_detector/test_detector.runs/.jobs/: vrs_config_1.xml  vrs_config_11.xml  vrs_config_12.xml  vrs_config_14.xml  vrs_config_15.xml  vrs_config_5.xml  vrs_config_6.xml  vrs_config_7.xml
test_detector/test_detector.runs/design_1_signal_detector_0_0_synth_1/: gen_run.xml  htr.txt  (+6 more)
(+1479 files in other folders)
